Update to fix issue with user image text spacing

--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,11 @@ body {
 	width: 2.5rem;
 	height: 2.5rem;
 	border-radius: 50%;
+	margin-right: 1.2rem;
+}
+
+.card__author__user {
+	display: flex;
 }
 
 .card__author__heading {
@@ -164,6 +169,7 @@ body {
 	text-transform: uppercase;
 	color: var(--grayish-blue);
 	font-size: 0.8rem;
+	letter-spacing: 0.2rem;
 }
 
 .card__author__share--show {
@@ -193,6 +199,7 @@ body {
 	flex-direction: row;
 	align-items: center;
 	justify-content: space-between;
+	padding-left: 1rem;
 }
 
 .card__author__sharebutton {
@@ -266,7 +273,7 @@ body {
 		height: 50px;
 		right: -49px;
 		border-radius: 0.5rem;
-		padding: 14px 30px;
+	/* 	padding: 14px 30px; */
 	}
 
 	.card__author__share--show .card__author__share__content {
